tests/ucc/type/good/take-addr-int-to-int-ptr.c
int main(void)
{
    int a;
    int *b;

    b = &a;

    return 0;
}
