tests/ucc/type/bad/read-only-lvalue-2.c
int main(void)
{
    const int *b;

    *b = 0;

    return 0;
}
